--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### 配置nginx服务的binlog地址，如果连接多个节点的话，使用逗号分隔
-system.binlogAddress=http://[fisco-node-server1]:[nginx-port1]/,http://[fisco-node-server2]:[nginx-port2]/
+system.binlogAddress=http://127.0.0.1:5299/
 
 ### 数据库连接配置
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/stash?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
