增加分库分表基础配置

--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     compileOnly "org.projectlombok:lombok"
     testAnnotationProcessor "org.projectlombok:lombok"
     testCompileOnly "org.projectlombok:lombok"
-
+    compile 'org.apache.shardingsphere:sharding-jdbc-spring-boot-starter:4.1.1'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation "org.springframework.boot:spring-boot-starter-aop"
