--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,47 @@
 system.binlogAddress=http://127.0.0.1:5299/
 
 ### 数据库连接配置
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/stash?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.maximum-pool-size=500
+spring.shardingsphere.datasource.names = stash1,stash2
+spring.shardingsphere.datasource.stash1.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.stash1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.stash1.jdbcUrl=jdbc:mysql://localhost:3306/stash1?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
+spring.shardingsphere.datasource.stash1.username=root
+spring.shardingsphere.datasource.stash1.password=123456
+
+spring.shardingsphere.datasource.stash2.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.stash2.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.stash2.jdbcUrl=jdbc:mysql://localhost:3306/stash2?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
+spring.shardingsphere.datasource.stash2.username=root
+spring.shardingsphere.datasource.stash2.password=123456
+
+spring.shardingsphere.sharding.default-data-source-name=stash1
+
+spring.shardingsphere.sharding.tables._sys_hash_2_block_.actual‐data‐nodes = stash$->{1..2}._sys_hash_2_block_
+spring.shardingsphere.sharding.tables._sys_hash_2_block_d_.actual‐data‐nodes = stash$->{1..2}._sys_hash_2_block_d_
+spring.shardingsphere.sharding.tables._sys_tx_hash_2_block_.actual‐data‐nodes = stash$->{1..2}._sys_tx_hash_2_block_
+spring.shardingsphere.sharding.tables._sys_tx_hash_2_block_d_.actual‐data‐nodes = stash$->{1..2}._sys_tx_hash_2_block_d_
+spring.shardingsphere.sharding.tables._sys_block_2_nonces_.actual‐data‐nodes = stash$->{1..2}._sys_block_2_nonces_
+spring.shardingsphere.sharding.tables._sys_block_2_nonces_d_.actual‐data‐nodes = stash$->{1..2}._sys_block_2_nonces_d_
+
+
+
+
+# 指定数据库分片规则，可以为所有表指定，也可以为特定表指定
+spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column= _num_
+spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=stash$->{_num_%2+1}
+#spring.shardingsphere.sharding.tables._sys_cns_.database-strategy.inline.sharding-column= _num_
+#spring.shardingsphere.sharding.tables._sys_cns_d_.database-strategy.inline.algorithm-expression =stash$->{_num_%2+1}
+# 配置公共表
+#spring.shardingsphere.sharding.broadcast‐tables=check_point,block_task_pool
+# 打开sql输出日志
+spring.shardingsphere.props.sql.show = true
+
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/stash?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+#spring.datasource.hikari.maximum-pool-size=500
 
 
 ### logback配置
