--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,16 @@ spring.shardingsphere.datasource.stash1.driver-class-name=com.mysql.cj.jdbc.Driv
 spring.shardingsphere.datasource.stash1.jdbcUrl=jdbc:mysql://localhost:3306/stash1?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
 spring.shardingsphere.datasource.stash1.username=root
 spring.shardingsphere.datasource.stash1.password=123456
+spring.shardingsphere.datasource.stash1.hikari.maximum-pool-size=100
 
 spring.shardingsphere.datasource.stash2.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.stash2.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.shardingsphere.datasource.stash2.jdbcUrl=jdbc:mysql://localhost:3306/stash2?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
 spring.shardingsphere.datasource.stash2.username=root
 spring.shardingsphere.datasource.stash2.password=123456
+spring.shardingsphere.datasource.stash2.maximum-pool-size=100
 
+# default route to stash1
 spring.shardingsphere.sharding.default-data-source-name=stash1
 
 spring.shardingsphere.sharding.tables._sys_hash_2_block_.actual‐data‐nodes = stash$->{1..2}._sys_hash_2_block_
@@ -23,16 +26,16 @@ spring.shardingsphere.sharding.tables._sys_tx_hash_2_block_.actual‐data‐node
 spring.shardingsphere.sharding.tables._sys_tx_hash_2_block_d_.actual‐data‐nodes = stash$->{1..2}._sys_tx_hash_2_block_d_
 spring.shardingsphere.sharding.tables._sys_block_2_nonces_.actual‐data‐nodes = stash$->{1..2}._sys_block_2_nonces_
 spring.shardingsphere.sharding.tables._sys_block_2_nonces_d_.actual‐data‐nodes = stash$->{1..2}._sys_block_2_nonces_d_
+spring.shardingsphere.sharding.tables._sys_hash_2_header_.actual‐data‐nodes = stash$->{1..2}._sys_hash_2_header_
+spring.shardingsphere.sharding.tables._sys_hash_2_header_d_.actual‐data‐nodes = stash$->{1..2}._sys_hash_2_header_d_
 
 
-# 指定数据库分片规则，可以为所有表指定，也可以为特定表指定
-spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column= _num_
-spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=stash$->{_num_%2+1}
-#spring.shardingsphere.sharding.tables._sys_cns_.database-strategy.inline.sharding-column= _num_
-#spring.shardingsphere.sharding.tables._sys_cns_d_.database-strategy.inline.algorithm-expression =stash$->{_num_%2+1}
+spring.shardingsphere.sharding.default-database-strategy.standard.sharding-column= _num_
+spring.shardingsphere.sharding.default-database-strategy.standard.precise-algorithm-class-name=com.webank.blockchain.data.stash.db.sharding.BlockShardingDatabaseAlgorithm
+spring.shardingsphere.sharding.default-database-strategy.standard.range-algorithm-class-name=com.webank.blockchain.data.stash.db.sharding.BlockShardingDatabaseAlgorithm
 
 # 打开sql输出日志
-spring.shardingsphere.props.sql.show = true
+spring.shardingsphere.props.sql.show = false
 
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/stash?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
 #spring.datasource.username=root
