--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.datasource.hikari.maximum-pool-size=500
 
 ### logback配置
 logging.file=./logs/stash.log
-logging.level.com.webank=INFO
+logging.level.com.webank=INiFO
