--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 ### 配置nginx服务的binlog地址，如果连接多个节点的话，使用逗号分隔
 system.binlogAddress=http://127.0.0.1:5299/
 
-### 数据库连接配置
+spring.shardingsphere.enabled=false
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/stash?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.maximum-pool-size=500
+#spring.datasource.hikari.maximum-pool-size=500
 
 
 ### logback配置
 logging.file=./logs/stash.log
-logging.level.com.webank=INFO
+logging.level.com.webank=INiFO
