fix charset of application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-### 配置nginx服务的binlog地址，如果连接多个节点的话，使用逗号分隔
+### \u914D\u7F6Enginx\u670D\u52A1\u7684binlog\u5730\u5740\uFF0C\u5982\u679C\u8FDE\u63A5\u591A\u4E2A\u8282\u70B9\u7684\u8BDD\uFF0C\u4F7F\u7528\u9017\u53F7\u5206\u9694
 system.binlogAddress=http://127.0.0.1:5299/
 
 spring.shardingsphere.enabled=false
@@ -10,6 +10,6 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 #spring.datasource.hikari.maximum-pool-size=500
 
 
-### logback配置
+### logback\u914D\u7F6E
 logging.file=./logs/stash.log
-logging.level.com.webank=INiFO
+logging.level.com.webank=INFO
