data-link-sync-init

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,13 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 ### logback\u914D\u7F6E
 logging.file=./logs/stash.log
 logging.level.com.webank=INFO
+
+
+### data-query
+data.query.enable=true
+data.query.certPath=./config
+data.query.groupId=1
+data.query.nodeStr=127.0.0.1:20200
+data.query.topic=DB
+
+
