--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,43 @@
 ### \u914D\u7F6Enginx\u670D\u52A1\u7684binlog\u5730\u5740\uFF0C\u5982\u679C\u8FDE\u63A5\u591A\u4E2A\u8282\u70B9\u7684\u8BDD\uFF0C\u4F7F\u7528\u9017\u53F7\u5206\u9694
 system.binlogAddress=http://127.0.0.1:5299/
 
-spring.shardingsphere.enabled=false
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/stash?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-#spring.datasource.hikari.maximum-pool-size=80
+### 分库分表配置
+#### 打开开关
+spring.shardingsphere.enabled=true
+#### 定义数据源
+spring.shardingsphere.datasource.names = stash1,stash2
+spring.shardingsphere.datasource.stash1.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.stash1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.stash1.jdbcUrl=jdbc:mysql://localhost:3306/stash1?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
+spring.shardingsphere.datasource.stash1.username=root
+spring.shardingsphere.datasource.stash1.password=123456
+
+spring.shardingsphere.datasource.stash2.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.stash2.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.stash2.jdbcUrl=jdbc:mysql://localhost:3306/stash2?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
+spring.shardingsphere.datasource.stash2.username=root
+spring.shardingsphere.datasource.stash2.password=123456
 
 
-### logback\u914D\u7F6E
+#### 不做分片的表，默认存储到stash1
+spring.shardingsphere.sharding.default-data-source-name=stash1
+
+#### 需分片的表，路由目标
+spring.shardingsphere.sharding.tables._sys_hash_2_block_.actual‐data‐nodes = stash$->{1..2}._sys_hash_2_block_$->{1..3}
+spring.shardingsphere.sharding.tables._sys_hash_2_block_d_.actual‐data‐nodes = stash$->{1..2}._sys_hash_2_block_d_$->{1..3}
+spring.shardingsphere.sharding.tables._sys_tx_hash_2_block_.actual‐data‐nodes = stash$->{1..2}._sys_tx_hash_2_block_$->{1..3}
+spring.shardingsphere.sharding.tables._sys_tx_hash_2_block_d_.actual‐data‐nodes = stash$->{1..2}._sys_tx_hash_2_block_d_$->{1..3}
+
+#### 需分片的表，分片策略
+spring.shardingsphere.sharding.default-database-strategy.standard.sharding-column= _num_
+spring.shardingsphere.sharding.default-database-strategy.standard.precise-algorithm-class-name=com.webank.blockchain.data.stash.db.sharding.BlockShardingAlgorithm
+spring.shardingsphere.sharding.default-database-strategy.standard.range-algorithm-class-name=com.webank.blockchain.data.stash.db.sharding.BlockShardingAlgorithm
+spring.shardingsphere.sharding.default-table-strategy.standard.sharding-column= _num_
+spring.shardingsphere.sharding.default-table-strategy.standard.precise-algorithm-class-name=com.webank.blockchain.data.stash.db.sharding.BlockShardingAlgorithm
+spring.shardingsphere.sharding.default-table-strategy.standard.range-algorithm-class-name=com.webank.blockchain.data.stash.db.sharding.BlockShardingAlgorithm
+#spring.shardingsphere.props.sql.show = false
+
+
+### logback配置
 logging.file=./logs/stash.log
 logging.level.com.webank=INFO
