--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ system.binlogAddress=http://127.0.0.1:5299/
 #### 打开开关
 spring.shardingsphere.enabled=true
 #### 定义数据源
-spring.shardingsphere.datasource.names = stash1,stash2
+spring.shardingsphere.datasource.names = stash1,stash2,stash3
 spring.shardingsphere.datasource.stash1.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.stash1.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.shardingsphere.datasource.stash1.jdbcUrl=jdbc:mysql://localhost:3306/stash1?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
@@ -18,23 +18,25 @@ spring.shardingsphere.datasource.stash2.jdbcUrl=jdbc:mysql://localhost:3306/stas
 spring.shardingsphere.datasource.stash2.username=root
 spring.shardingsphere.datasource.stash2.password=123456
 
+spring.shardingsphere.datasource.stash3.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.stash3.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.stash3.jdbcUrl=jdbc:mysql://localhost:3306/stash3?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
+spring.shardingsphere.datasource.stash3.username=root
+spring.shardingsphere.datasource.stash3.password=123456
 
 #### 不做分片的表，默认存储到stash1
 spring.shardingsphere.sharding.default-data-source-name=stash1
 
 #### 需分片的表，路由目标
-spring.shardingsphere.sharding.tables._sys_hash_2_block_.actual‐data‐nodes = stash$->{1..2}._sys_hash_2_block_$->{1..3}
-spring.shardingsphere.sharding.tables._sys_hash_2_block_d_.actual‐data‐nodes = stash$->{1..2}._sys_hash_2_block_d_$->{1..3}
-spring.shardingsphere.sharding.tables._sys_tx_hash_2_block_.actual‐data‐nodes = stash$->{1..2}._sys_tx_hash_2_block_$->{1..3}
-spring.shardingsphere.sharding.tables._sys_tx_hash_2_block_d_.actual‐data‐nodes = stash$->{1..2}._sys_tx_hash_2_block_d_$->{1..3}
+spring.shardingsphere.sharding.tables._sys_hash_2_block_.actual‐data‐nodes = stash$->{1..3}._sys_hash_2_block_
+spring.shardingsphere.sharding.tables._sys_hash_2_block_d_.actual‐data‐nodes = stash$->{1..3}._sys_hash_2_block_d_
+spring.shardingsphere.sharding.tables._sys_tx_hash_2_block_.actual‐data‐nodes = stash$->{1..3}._sys_tx_hash_2_block_
+spring.shardingsphere.sharding.tables._sys_tx_hash_2_block_d_.actual‐data‐nodes = stash$->{1..3}._sys_tx_hash_2_block_d_
 
 #### 需分片的表，分片策略
 spring.shardingsphere.sharding.default-database-strategy.standard.sharding-column= _num_
 spring.shardingsphere.sharding.default-database-strategy.standard.precise-algorithm-class-name=com.webank.blockchain.data.stash.db.sharding.BlockShardingAlgorithm
 spring.shardingsphere.sharding.default-database-strategy.standard.range-algorithm-class-name=com.webank.blockchain.data.stash.db.sharding.BlockShardingAlgorithm
-spring.shardingsphere.sharding.default-table-strategy.standard.sharding-column= _num_
-spring.shardingsphere.sharding.default-table-strategy.standard.precise-algorithm-class-name=com.webank.blockchain.data.stash.db.sharding.BlockShardingAlgorithm
-spring.shardingsphere.sharding.default-table-strategy.standard.range-algorithm-class-name=com.webank.blockchain.data.stash.db.sharding.BlockShardingAlgorithm
 #spring.shardingsphere.props.sql.show = false
 
 
