--- a/data-sync-bash/config.conf
+++ b/data-sync-bash/config.conf
@@ -5,9 +5,9 @@ stash.dbname=stash
 stash.username=root
 stash.password=123456
 
-[data]
-sync.dataPath=./data
-sync.type=RocksDB
+[node]
+node.groupId=1
+node.path=./
 
 [more]
 sync.endBlockNumber=10000
