--- a/tools/config/application.properties
+++ b/tools/config/application.properties
@@ -16,7 +16,7 @@ logging.level.com.webank=INFO
 
 
 ### data-query
-data.query.enable=true
+data.query.enable=false
 data.query.certPath=./config
 data.query.groupId=1
 data.query.nodeStr=127.0.0.1:20200
