--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ### 配置nginx服务的binlog地址，如果连接多个节点的话，使用逗号分隔
-system.binlogAddress=http://www.example.com:5299/,http://www.example.com:5300/
+system.binlogAddress=http://www.example.com:5299/
+system.localBinlogPath=binlog
 
 ### 数据库连接配置
 #### 禁用分库分表
