--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,15 @@ repositories {
     mavenCentral()
 }
 
+def log4j_version="2.15.0"
+List logger = [
+        "org.apache.logging.log4j:log4j-api:$log4j_version",
+        "org.apache.logging.log4j:log4j-to-slf4j:$log4j_version",
+]
+
 dependencies {
-	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile logger
+    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     annotationProcessor "org.projectlombok:lombok"
     compileOnly "org.projectlombok:lombok"
     testAnnotationProcessor "org.projectlombok:lombok"
