--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,16 @@
 ### 配置nginx服务的binlog地址，如果连接多个节点的话，使用逗号分隔
-system.binlogAddress=http://www.example.com:5299/
-system.localBinlogPath=binlog
-
+system.binlogAddress=http://localhost:5299/
 ### 数据库连接配置
 #### 禁用分库分表
-spring.shardingsphere.enabled=false 
+spring.shardingsphere.enabled=false
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/stash?autoReconnect=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2b8
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.druid.filters=slf4j
 
 
 ### data-query
-data.query.enable=false
+data.query.enable=true
 data.query.certPath=./config
 data.query.groupId=1
 data.query.nodeStr=127.0.0.1:20200
