--- a/build.gradle
+++ b/build.gradle
@@ -69,9 +69,10 @@ dependencies {
     compile 'cn.hutool:hutool-all:4.6.2'
     
     // web3j依赖
-    implementation ('org.fisco-bcos.java-sdk:java-sdk:2.6.1') {
+    implementation ('org.fisco-bcos.java-sdk:fisco-bcos-java-sdk:2.9.0') {
         exclude group: 'org.slf4j'
     }
+
     compile "com.madgag.spongycastle:core:1.58.0.0"
     compile "com.madgag.spongycastle:prov:1.58.0.0"
     compile "com.cedarsoftware:java-util:1.8.0" // for deep equals
